2005-04-20  DindinX  <dindinx@gimp.org>

	* tools/widgets.c: added all but the GimpPixmap widget.
	The unit menu shot is also very buggy.

	* libgimpwidgets/images/gimp-color-area.png
	* libgimpwidgets/images/gimp-color-button.png
	* libgimpwidgets/images/gimp-color-hex-entry.png
	* libgimpwidgets/images/gimp-color-scale.png
	* libgimpwidgets/images/gimp-color-selection.png
	* libgimpwidgets/images/gimp-dialog.png
	* libgimpwidgets/images/gimp-enum-combo-box.png
	* libgimpwidgets/images/gimp-int-combo-box.png
	* libgimpwidgets/images/gimp-memsize-entry.png
	* libgimpwidgets/images/gimp-offset-area.png
	* libgimpwidgets/images/gimp-path-editor.png
	* libgimpwidgets/images/gimp-pick-button.png
	* libgimpwidgets/images/gimp-preview-area.png
	* libgimpwidgets/images/gimp-unit-menu.png: updated all
	these files.

2005-04-20  Sven Neumann  <sven@gimp.org>

	* tools/README.shooter: adapted for GIMP.

	* tools/Makefile.am (EXTRA_DIST): include it in the tarball.

2005-04-20  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am
	* tools/shooter.c
	* tools/widgets.c: fixed includes and dependencies, expand the path
	returned from gimp_config_build_data_path(), use common color code.

2005-04-20  Sven Neumann  <sven@gimp.org>

	* tools/shooter.c: set an application name, pass the default
	module path to gimp_module_db_load().

2005-04-20  DindinX  <dindinx@gimp.org>

	* tools/shooter.c: cleanup
	* tools/widgets.c: cleanup and added two new widgets: frame and path
	editor.

	* libgimpwidgets/images/gimp-chain-button.png
	* libgimpwidgets/images/gimp-color-button.png
	* libgimpwidgets/images/gimp-color-hex-entry.png
	* libgimpwidgets/images/gimp-color-scale.png
	* libgimpwidgets/images/gimp-color-selection.png: updated.
	
	* libgimpwidgets/images/gimp-frame.png
	* libgimpwidgets/images/gimp-path-editor.png: new shots.

2005-04-20  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am: do not build doc-shooter by default.

2005-04-20  Sven Neumann  <sven@gimp.org>
